# term-frame

./: README.md  pyproject.toml  term_frame.sh
src/term_frame/: __init__.py  status_bar.py
